Fix bug: Footer not visible in landscape

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -87,6 +87,7 @@ main {
     footer {
         font-size: 0.8em;
         margin: 3rem 1rem 2rem 1rem;
+        z-index: 2;
     }
     @media screen and (min-width: 500px) {
         .top h1 {
